[tool.poetry]
name = "vyos-vm-images"
version = "0.1.0"
description = ""
authors = ["Yuya Kusakabe <yuya.kusakabe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
